Fix bug on media component in Safari, overflow auto causing scroll bar, now changed to overflow hidden

--- a/components/media.scss
+++ b/components/media.scss
@@ -9,7 +9,7 @@
     .media-body {
         flex-grow: 1;
         flex-shrink: 1;
-        overflow: auto;
+        overflow: hidden; // was auto but caused scroll bars in safari
         flex-basis: auto;
         text-align: left;
     }
